# Glasspectrum

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
Glasspectum-v1.0-macOS/: install.sh
Glasspectum-v1.0-macOS/Glasspectum.ofx.bundle/Contents/: Info.plist
Glasspectum-v1.0-macOS/Glasspectum.ofx.bundle/Contents/MacOS/: Glasspectum.ofx
Glasspectum-v1.0-macOS/Glasspectum.ofx.bundle/Contents/Resources/: glasspectum.metal
docs/: app.js  index.html  style.css
include/ofx/: ofxCore.h  ofxImageEffect.h  ofxMemory.h  ofxMultiThread.h  ofxParam.h  ofxProperty.h
scripts/: build_pkg.sh  install_linux.sh  install_macos.sh  install_windows.bat
shaders/: glasspectrum.cl  glasspectrum.cu  glasspectrum.metal  glasspectum.cl  glasspectum.cu
src/: color_pipeline.cpp  color_pipeline.h  dof_engine.h  glasspectrum_plugin.cpp  glasspectrum_processor.cpp  glasspectrum_processor.h  glasspectum_plugin.cpp  glasspectum_processor.cpp  glasspectum_processor.h  lens_profile_db.cpp  lens_profile_db.h  sensor_table.h  trait_mixer.cpp  trait_mixer.h
src/gpu/: cuda_renderer.cu  cuda_renderer.h  metal_renderer.h  metal_renderer.mm  opencl_renderer.cpp  opencl_renderer.h
tests/: CMakeLists.txt  test_lens_db.cpp  test_pipeline.cpp
tools/: CMakeLists.txt  glasspectrum_qa.cpp  glasspectum_qa.cpp
